 /* $Id: ChangeLog,v 1.599 2000-01-01 12:18:34 sandervl Exp $ */

 2000-01-01: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Workaround for crash in Lotus Notes when switching to a new
                  view (PM sends WM_WINDOWPOSCHANGED msg after DestroyWindow
                  has been called for a window -> don't dispatch this msg)

 1999-12-31: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- WINMM: Implemented waveOutGet/SetVolume
	- KERNEL32: Fixed bugs in iccio.asm (OFFSET FLAT:devname)

 1999-12-31: Edgar Buerkle <Edgar.Buerkle@gmx.net>
	- KERNEL32: Started with implementation of debug apis & support
                    for debugging win32 apps (mostly for additional logging)

 1999-12-30: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: ported menu control from WINE (not yet activated)
		  ported icontitle control from WINE
		  added winswitch control (stub)
		  fixed Win32BaseWindow::hasWindowName

 1999-12-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Added stubs for Load/FreeLibrary16 & GetProcAddress16
                    (ordinals 35,36 & 37)
                    Added support for SEC_COMMIT memory map flag
                    Don't fail for unknown handles in (Msg)WaitForMultipleObject;
                    they could be thread or process handles (which we don't translate)
	- USER32:   Load bitmaps file completely in LoadBitmapA. Creating
                    a file mapping with reserved memory has little use
                    as the entire file will be read completely anyway.
                    Added some useful logging for DDE apis.
                    Fixed problem with combo boxes refusing to expand if it
                    the edit control doesn't have the focus.
	- GDI32:    Fixed GetObject for DIB sections
	- COMCTL32: Increased default height of rebar band from 20 to 36
                    (temporary hack for AbiWord)

 1999-12-30: Bart van Leeuwen <Bart_van_Leeuwen@netage.nl>
	- USER32: Implemented accelerator support
